--- a/site-acessivel-projeto-inicial/index.html
+++ b/site-acessivel-projeto-inicial/index.html
@@ -38,6 +38,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
+                <img src="img/Gol_de_Yuri_Alberto_contra_o_Palmeiras.jpg"class="img-fluid img-inicio">
 
             </div>
         </section>
@@ -46,11 +47,9 @@
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop.</p>
+                    <p class="p-2">Nascido em São José dos Campos, São Paulo, Yuri Alberto ingressou na base do Santos em 2013, aos doze anos de idade. O atacante assinou seu primeiro contrato profissional no dia 28 de julho de 2017, com duração de três anos. Em 1 de novembro de 2017, foi promovido ao elenco principal por Elano, técnico interino.[3] Ele estreou no time titular no dia 16 de novembro, quinze dias depois, substituindo o volante Renato na derrota fora de casa por 3 a 1 contra o Bahia.
+                        Em 16 de julho de 2020, teria assinado um contrato de cinco anos com o Internacional. Isso levou a um conflito com o Santos, pois o clube alegou que uma cláusula no contrato de Yuri Alberto dava prioridade para a renovação.[8] Logo após o anúncio na mídia, o Internacional divulgou um comunicado oficial lamentando o "vazamento" da oferta.Em 30 de janeiro de 2022, assinou um contrato de cinco anos com o Zenit, que pagou 25 milhões de euros (aproximadamente 150 milhões de reais).[16] Estreou pelo time russo no dia 3 de fevereiro, em uma vitória por 1 a 0 contra o Midtjylland, pela Atlantic Cup.
+                        Em 30 de janeiro de 2022, assinou um contrato de cinco anos com o Zenit, que pagou 25 milhões de euros (aproximadamente 150 milhões de reais).[16] Estreou pelo time russo no dia 3 de fevereiro, em uma vitória por 1 a 0 contra o Midtjylland, pela Atlantic Cup. Marcou seu primeiro gol pelo Zenit no dia 28 de fevereiro, na vitória por 3 a 2 sobre o Rubin Kazan, válida pela Premier League Russa.[18] Já no dia 30 de abril, conquistou a Premier League Russa de 2021–22 com três rodadas de antecedência após seu time vencer o Lokomotiv Moscou por 3 a 1..</p>
                 </div>
             </div>
         </section>
